# tg_mqtt_at

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
examples/: mqtt_pub_test.py  mqtt_sub_test.py  readme.md
mqttc/: amqtt.py  at.py  errorcodes.py  main.py  pmqtt.py  q.py  rough.py  rough_reader.py  tg.py  tgreply.py
